<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textChannelName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mobile_app_development"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/textLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textChannelName">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/like"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subscribe"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLayout">

        <Button
            android:id="@+id/btnTranslateHindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate_to_hindi"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnTranslateSpanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate_to_spanish"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnTranslateFrench"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate_to_french"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnTranslateKorean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate_to_korean"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnTranslateEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate_to_english"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>